--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "jest": {
     "preset": "jest-expo"
   },
+  "type": "module",
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
@@ -30,7 +31,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "stable": "^0.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
