--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,17 +4,10 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./*"
-      ],
-      "@components/*" : ["src/components/*"],
-      "@assets/*" : ["assets/*"]
+      "@/*": ["./*"],
+      "@components/*": ["src/components/*"],
+      "@assets/*": ["assets/*"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-  ]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
